# ModernCppPlayGround

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ch2/: CMakeLists.txt
src/ch2/constants/constexpr/: CMakeLists.txt  main.cpp
src/ch2/constants/nullptr/: CMakeLists.txt  main.cpp
src/ch2/control_flow/if_constexpr/: CMakeLists.txt  main.cpp
src/ch2/control_flow/range_based_for_loop/: CMakeLists.txt  main.cpp
src/ch2/oop/delegate_constructor/: CMakeLists.txt  main.cpp
src/ch2/oop/explicit_delete_default_function/: CMakeLists.txt  main.cpp
src/ch2/oop/explicit_virtual_function_overwrite/: CMakeLists.txt  main.cpp
src/ch2/oop/inheritance_constructor/: CMakeLists.txt  main.cpp
src/ch2/oop/strongly_typed_enum/: CMakeLists.txt  main.cpp
src/ch2/templates/templates/: CMakeLists.txt  main.cpp
src/ch2/type_inference/auto/: CMakeLists.txt  main.cpp
src/ch2/type_inference/decltype/: CMakeLists.txt  main.cpp
src/ch2/type_inference/tail_type_inference/: CMakeLists.txt  main.cpp
src/ch2/variables_and_initialization/define_var/: CMakeLists.txt  main.cpp
src/ch2/variables_and_initialization/initializer_list/: CMakeLists.txt  main.cpp
src/ch2/variables_and_initialization/structured_binding/: CMakeLists.txt  main.cpp
src/ch3/: CMakeLists.txt
src/ch3/function_object_wrapper/: CMakeLists.txt  main.cpp
src/ch3/lambda_expression/: CMakeLists.txt  main.cpp
src/ch4/: CMakeLists.txt
src/ch4/tuples/: main.cpp  (+1 more)
src/ch5/: CMakeLists.txt
src/ch6/: CMakeLists.txt
src/ch7/: CMakeLists.txt
src/ch9/: CMakeLists.txt
test/: CMakeLists.txt
(+30 files in other folders)
