add_subdirectory(constants/nullptr)
add_subdirectory(constants/constexpr)

add_subdirectory(variables_and_initialization/define_var)
add_subdirectory(variables_and_initialization/initializer_list)
add_subdirectory(variables_and_initialization/structured_binding)

add_subdirectory(type_inference/auto)
add_subdirectory(type_inference/decltype)
add_subdirectory(type_inference/tail_type_inference)

add_subdirectory(control_flow/if_constexpr)
add_subdirectory(control_flow/range_based_for_loop)

add_subdirectory(templates/templates)

add_subdirectory(oop/delegate_constructor)
add_subdirectory(oop/inheritance_constructor)
add_subdirectory(oop/explicit_virtual_function_overwrite)
add_subdirectory(oop/explicit_delete_default_function)
add_subdirectory(oop/strongly_typed_enum)